# ai-playground

./: .env.example  LICENSE  README.md  config.py  pyproject.toml
api/: main.py
data/samples/: business_report.txt  legal_document.txt
frontend/: index.html  package-lock.json  package.json
frontend/api/: chat.js
frontend/src/: App.jsx  AssistantKB.js  PlaygroundAssistant.jsx  assistantEngine.js
frontend/src/services/: azureAI.js
services/documents/: analyzer.py  chunker.py  qa_engine.py
services/llm/: comparator.py  cost_tracker.py  providers.py
services/usecases/: chatbot.py  content_gen.py  data_extract.py  translator.py
tests/: conftest.py  test_analyzer.py  test_api.py  test_comparator.py  test_cost_tracker.py  test_providers.py  test_qa_engine.py  test_usecases.py
